tests/expectations/parser-expression/expression/path.out
x::y

X::Y

xxx::xxx

XXX::YYY::ZZZ

Error [EPAR0370047]: expected '.' -- found '::'
    --> test_4:1:5
     |
   1 | self::y
     |     ^^
